[metadata]
name = self-unzip-html
version = 0.1.0
author = six-two
author_email = pip@six-two.dev
description = Create self-extracting HTML pages with arbitrary contents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/six-two/self-unzip.html
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
package_dir =
    = python
packages = find:
python_requires = >=3.9
scripts =
    python/bin/self-unzip-html.py
install_requires =

[options.packages.find]
where = python
