[metadata]
name = self-unzip-html
version = 0.2.1
author = six-two
author_email = pip@six-two.dev
description = Create self-extracting and/or password protected HTML pages with arbitrary contents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/six-two/self-unzip.html
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
package_dir =
    = python
packages = find:
python_requires = >=3.9
install_requires =

[options.packages.find]
where = python

# SEE https://packaging.python.org/en/latest/specifications/entry-points/ and https://stackoverflow.com/questions/48884796/how-to-set-up-entry-points-in-setup-cfg
[options.entry_points]
console_scripts =
    # deprecated, only here for backwards compatability
    self-unzip-html.py = self_unzip_html:main
    # use this script instead, they are the same (except that this one does not need the .py at the end)
    self-unzip-html = self_unzip_html:main
